<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/cinema_font"
        android:text="@string/day_description"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp">

        <RadioGroup
            android:id="@+id/radio_group_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checkedButton="@id/radio_btn_90"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_90"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_90" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_60"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_60" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_30"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_30" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_20" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_7" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/cinema_font"
        android:text="@string/gigabyte_description"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp">

        <RadioGroup
            android:id="@+id/radio_group_gigabyte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checkedButton="@id/radio_btn_3"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_15" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_10" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_5" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_4" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:text="@string/_3" />
        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_500"
        android:fontFamily="@font/cinema_font"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/confirm_edit"
        android:textSize="18sp" />

</LinearLayout>