<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="1dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/item_product_description"
            android:padding="8dp"
            android:src="@drawable/ic_product_internet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_product"
            android:layout_alignBottom="@id/img_product"
            android:layout_margin="4dp"
            android:layout_toStartOf="@id/img_product"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/toman" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/cinema_font"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_45000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/gigabyte"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gigabyte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_3"
                android:textSize="24sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/day"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cinema_font"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/_60"
                android:textSize="24sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/dotted"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@id/img_product"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/description_for_view_seprator_in_product_item"
            android:layerType="software"
            android:src="@drawable/dotted" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dotted"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red_delete"
                android:fontFamily="@font/cinema_font"
                android:text="حذف"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/logo_yellow"
                android:fontFamily="@font/cinema_font"
                android:text="ویرایش"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>