<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_yellow"
    android:orientation="vertical"
    tools:context=".ui.product.FragmentProduct">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.product.FragmentProduct">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/internet_banner"
                android:src="@drawable/banner_internet" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-16dp"
                android:background="@color/logo_bg"
                android:backgroundTint="@color/logo_bg"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/my_irancell_font_bold"
                        android:text="@string/day_description" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="8dp">

                        <RadioGroup
                            android:id="@+id/radio_group_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/radio_btn_90"
                            android:orientation="horizontal">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_90"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_90"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_60"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_60"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_30"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_30"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_20"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_20"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_7"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_7"
                                app:fontFamily="@font/cinema_font" />
                        </RadioGroup>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/my_irancell_font_bold"
                        android:text="@string/gigabyte_description" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="8dp">

                        <RadioGroup
                            android:id="@+id/radio_group_gigabyte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:checkedButton="@id/radio_btn_3"
                            android:orientation="horizontal">

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_15"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/_15"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_10"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_10"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_5"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_5"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_4"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_4"
                                app:fontFamily="@font/cinema_font" />

                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/radio_btn_3"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_weight="1"
                                android:text="@string/_3"
                                app:fontFamily="@font/cinema_font" />
                        </RadioGroup>

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:fontFamily="@font/cinema_font"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/add_product"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>



