<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_network"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie_network" />

    <TextView
        android:id="@+id/tv_network_error"
        style="@style/tv_alert_dialog"
        android:text="@string/network_error"
        android:textSize="@dimen/standard_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_network"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/img_btn_mobileData_setting"
        style="@style/img_btn_alert_dialog"
        android:background="@drawable/selector_green_btn"
        android:contentDescription="@string/btn_setting_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_btn_wifi_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_network_error"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_import_export_24" />

    <ImageButton
        android:id="@+id/img_btn_wifi_setting"
        style="@style/img_btn_alert_dialog"
        android:background="@drawable/selector_green_btn"
        android:contentDescription="@string/btn_setting_wifi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_network_error"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_wifi" />

</androidx.constraintlayout.widget.ConstraintLayout>